--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
             content="A to-do list made for games with repeatable tasks"
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/chocobo-icon.png" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-9E1PSRMH41"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-9E1PSRMH41');
+        </script>
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
