Add the new chocodo images to the site

--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,27 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/chocobo-icon.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/chocodo.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
             content="A to-do list made for games with repeatable tasks"
         />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/chocobo-icon.png" />
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/chocodo512.png" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-9E1PSRMH41"></script>
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-9E1PSRMH41"
+        ></script>
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag('js', new Date())
 
-          gtag('config', 'G-9E1PSRMH41');
+            gtag('config', 'G-9E1PSRMH41')
         </script>
         <!--
       manifest.json provides metadata used when your web app is installed on a
